--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1949,6 +1949,18 @@ select {
   padding-left: 4rem;
   padding-right: 4rem;
 }
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
